MOBI-342 View Manager Component - overflow auto on list item is causing layout issues
git-svn-id: http://anonsvn.icesoft.org/repo/icemobile/trunk/icemobile@38593 1de00972-ac04-4911-a46b-06793c8d78d9

--- a/resources/themes/base/1_list.scss
+++ b/resources/themes/base/1_list.scss
@@ -60,8 +60,6 @@
 .mobi-list-item-default {
     margin: 0;
     padding: 0;
-    overflow: auto;
-    
 }
 
 .mobi-list-item-default > span {
